--- a/MainDataBase/MainDataBase.csproj
+++ b/MainDataBase/MainDataBase.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="mysqlconnector" Version="2.1.13" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassHolder\Classholder.csproj" />
+  </ItemGroup>
+
 </Project>
